# docx4llm

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
docx4llm/: __init__.py  numbering.py
src/docx4llm/: __init__.py  api.py  cli.py  constants.py  document_modifier.py  docx_io.py  exceptions.py  main.py  numbering.py  numbering_domain.py  numbering_formats.py  pandoc_utils.py  xml_parser.py  xml_utils.py
tests/: convert_numbering_test.py  pandoc_test.py
tests/data/: test_docx.docx
